Optimize network version du 02 AVRIL 2026